fixed z-index

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,7 +41,7 @@ header {
   position: fixed;
   border-bottom: 1px solid black;
   height: 60px;
-  z-index: 99;
+  z-index: 10;
   top: 0;
   left: 0;
   right: 0;
@@ -76,11 +76,12 @@ header {
 /* ------------main-------------- */
 
 #map {
-  z-index: -1;
   height: 100%;
 }
 
 #rightMenu {
+  position: relative;
+  z-index: 10;
   text-align: center;
   width: 250px;
   background: rgba(54, 25, 25, .75);
